# VoiceMirror

./: .gitignore  CMakeLists.txt  CMakePresets.json  Desktop.ini  README.md  VoiceMirror.conf.example
include/: COMUtilities.h  ChannelUtility.h  ConfigParser.h  Defconf.h  DeviceMonitor.h  Logger.h  RAIIHandle.h  SoundManager.h  VoicemeeterAPI.h  VoicemeeterManager.h  VoicemeeterRemote.h  VolumeMirror.h  VolumeUtils.h  WindowsManager.h  WindowsVolumeManager.h
src/: COMUtilities.cpp  ChannelUtility.cpp  ConfigParser.cpp  DeviceMonitor.cpp  Logger.cpp  SoundManager.cpp  VoicemeeterAPI.cpp  VoicemeeterManager.cpp  VolumeMirror.cpp  WindowsManager.cpp  WindowsVolumeManager.cpp  main.cpp
